--- a/components/about-us.html
+++ b/components/about-us.html
@@ -14,7 +14,7 @@
           <h1>UniHub</h1>
         </div>
         <ul class="nav">
-          <li><a href="/index.html">Home</a></li>
+          <li><a href="/testing/templates/index.html">Home</a></li>
           <li><a href="/components/eventcalendar.html">Event Calendar</a></li>
           <li><a href="/components/internship.html">Internship</a></li>
           <li><a href="/e-learning/e-learning.html">E-learning</a></li>
@@ -106,7 +106,7 @@
           <a href="/components/about-us.html">About us</a>
           <a href="#">Help Center</a>
           <a href="#">Contact us</a>
-          <a href="#">FAQs</a>
+          <a href="/components/faqs.html">FAQs</a>
         </div>
         <div class="footer-copyright">
           &copy; 2025 UniHub - v2.1 - Privacy - Terms
