--- a/components/eventcalendar.html
+++ b/components/eventcalendar.html
@@ -15,7 +15,7 @@
               <h1>UniHub</h1>
             </div>
             <ul class="nav">
-              <li><a href="/index.html">Home</a></li>
+              <li><a href="/testing/templates/index.html">Home</a></li>
               <li><a href="/components/eventcalendar.html">Event Calendar</a></li>
               <li><a href="/components/internship.html">Internship</a></li>
               <li><a href="/components/E_learning.html">E-learning</a></li>
