--- a/testing/templates/index.html
+++ b/testing/templates/index.html
@@ -22,7 +22,7 @@
           <li><a href="/index.html">Home</a></li>
           <li><a href="/components/eventcalendar.html">Event Calendar</a></li>
           <li><a href="/components/internship.html">Internship</a></li>
-          <li><a href="/e-learning/e-learning.html">E-learning</a></li>
+          <li><a href="http://localhost:5000" class="e-learning-button">E-Learning</a></li>
           <li>
             <a href="#">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg>
@@ -223,7 +223,7 @@
           <a href="/components/about-us.html">About us</a>
           <a href="#">Help Center</a>
           <a href="#">Contact us</a>
-          <a href="#">FAQs</a>
+          <a href="/components/faqs.html">FAQs</a>
         </div>
         <div class="footer-copyright">
           &copy; 2025 UniHub - v2.1 - Privacy - Terms
