Linked the homepage to the new e-learning module

--- a/testing/templates/index.html
+++ b/testing/templates/index.html
@@ -100,7 +100,7 @@
                 <div class="feature-icon">
                   <i class="fas fa-graduation-cap"></i>
                 </div>
-                <h3 class="feature-title"><a href="/components/E_learning.html">E-Learning Hub</a></h3>
+                <h3 class="feature-title"><a href="http://localhost:5000">E-Learning Hub</a></h3>
                 <p class="feature-description">
                   Access exclusive educational resources, tutorials, and learning materials.
                 </p>
