--- a/components/about-us.html
+++ b/components/about-us.html
@@ -13,7 +13,7 @@
           <img src="/images/campusconnectlogowithouttext.png" alt="Campus Connect Logo">
           <h1>UniHub</h1>
         </div>
-        <ul class="nav">o
+        <ul class="nav">
           <li><a href="/testing/templates/index.html">Home</a></li>
           <li><a href="/components/eventcalendar.html">Event Calendar</a></li>
           <li><a href="/components/internship.html">Internship</a></li>
